# Kweli

./: .env.example  .gitignore  .vulture_whitelist.py  CLAUDE.md  DEVELOPMENT_STATUS.md  README.md  neo4j_queries.md  pyproject.toml  pytest.ini  run_parallel_etl.py
.claude/: settings.local.json
agent/: README.md  __init__.py  callbacks.py  cli.py  cli_enhanced.py  config.py  graph.py  prompts.py
agent/context/: __init__.py  extractor.py
agent/tools/: __init__.py  analytics_tools.py  neo4j_tools.py
config/: country_mapping.json  settings.yaml
docker/: Dockerfile.etl  docker-compose.yml
docker/neo4j/: init.cypher
docs/: 100_percent_coverage_plan.md  KG Best Practicies.md  MYSQL_STREAMING_ETL_STATUS.md  PRODUCTION_MIGRATION_PLAN.md  PROJECT_GUIDE.md  agent_guide.md  agent_implementation.md  data_quality_investigation_report.md  discrepancy_sql_vs_neo4j.md  education_details_analysis.md  employment_data_deep_analysis.md  etl_fixes.md  etl_optimization_plan.md  etl_performance_results.md  has_flags_analysis.md  kweli_usage_guide.md  kweli_verification.md  learner_identity_analysis.md  learning_details_analysis.md  next_steps.md  optimization_implementation_summary.md  performance_optimization_plan.md  verification_summary.md
docs/archive/employment_analysis/: employment_analysis_findings.md  employment_data_validation.md
docs/archive/optimization_history/: comprehensive_optimization_analysis.md  etl_performance_fix_plan.md
draft/: column_names.txt
kweli/: __init__.py
kweli/agent/: callbacks.py  cli.py  config.py  graph.py  prompts.py  query_status.py  state.py
kweli/agent/context/: __init__.py
kweli/agent/tools/: __init__.py  analytics_tools.py  neo4j_tools.py  validation.py
kweli/etl/: cli.py  run_etl.py
kweli/etl/models/: __init__.py  nodes.py  parsers.py  relationships.py
kweli/etl/utils/: config.py
model/: ModelIdea.md
notebooks/: NOTEBOOK_VALIDATION.md  duckdb_deep_analytics.ipynb  learner_journey_sql_vs_neo4j.ipynb  neo4j_deep_analytics.ipynb  sql_vs_graph_analytics.ipynb
src/: cli.py  run_etl.py
src/etl/: batch_accumulator.py  checkpoint.py  extractor.py  loader.py  pipeline.py  progress.py  transformer.py  two_phase_pipeline.py
src/models/: __init__.py  enums.py  nodes.py  relationships.py
src/neo4j_ops/: batch_ops.py  connection.py  cypher_builder.py  indexes.py  node_creator.py  relationship_creator.py
src/transformers/: csv_reader.py  csv_reader_fixed.py  date_converter.py  field_mapper.py  geo_normalizer.py  json_parser.py  learning_state_history_builder.py  polars_csv_reader.py  professional_status_history_builder.py  skills_parser.py  state_deriver.py
src/utils/: config.py  helpers.py  logger.py
src/validators/: data_quality.py  learner_validator.py  relationship_validator.py
tests/agent/: __init__.py  test_analytics_tools.py  test_config.py  test_context_persistence.py  test_integration.py  test_validation.py
tests/test_agent/: test_analytics_tools.py  test_config.py  test_context_persistence.py  test_integration.py  test_validation.py
tests/unit/: test_etl.py  test_models.py  test_mysql_reader.py  test_transformers.py  test_validators.py
(+31 files in other folders)
