[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kweli"
version = "0.1.0"
description = "Kweli - Impact Learners Analytics Platform (ETL + Agent)"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Ahmed Abulkhair"}
]
dependencies = [
    "pydantic>=2.5.0",
    "neo4j>=5.15.0",
    "polars>=0.19.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "structlog>=23.2.0",
    "click>=8.1.7",
    "pyyaml>=6.0.1",
    "pandas>=2.3.3",
    # LangGraph + LangChain dependencies
    "langgraph>=0.2.50",
    "langchain>=0.3.0",
    "langchain-core>=0.3.30",
    "langchain-anthropic>=0.3.10",
    "langchain-openai>=0.2.10",
    "httpx>=0.28.0",
    "duckdb>=1.4.2",
    # Observability
    "langfuse>=2.0.0",
    "mysql-connector-python>=9.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.7.0",
    "black>=23.12.0",
    "ruff>=0.1.7",
    "vulture>=2.10",
    "ipython>=8.18.0",
    "jupyter>=1.0.0",
    "duckdb>=0.9.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "ipywidgets>=8.1.0",
]

[project.scripts]
kweli-etl = "kweli.etl.cli:cli"
kweli-agent = "kweli.agent.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["kweli", "kweli.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--cov=kweli",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--strict-markers",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "slow: Slow running tests",
]

[tool.black]
line-length = 100
target-version = ["py310"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = ["E501"]  # line too long (handled by black)

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
strict_concatenate = true

[[tool.mypy.overrides]]
module = [
    "polars.*",
    "neo4j.*",
    "langgraph.*",
    "langchain.*",
    "langchain_core.*",
    "langchain_anthropic.*",
    "langchain_openai.*",
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["kweli"]
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
